--- a/assets/scss/style/_color.scss
+++ b/assets/scss/style/_color.scss
@@ -203,3 +203,7 @@ $ap-yellow-600: #fee100 !default;
 .bg-blue {
     background-color: $spc-blue !important;
 }
+
+.box-shadow {
+    box-shadow: 0px 1px 22px 4px rgba(0, 0, 0, 0.07);
+}
